[gd_scene load_steps=3 format=3 uid="uid://bnk5limq32uk"]

[ext_resource type="Script" path="res://scripts/misc/trash_popup.gd" id="1_3pq3j"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_3yp3q"]
bg_color = Color(0.337255, 0.337255, 0.337255, 1)

[node name="TrashPopup" type="PopupPanel"]
size = Vector2i(150, 70)
visible = true
theme_override_styles/panel = SubResource("StyleBoxFlat_3yp3q")
script = ExtResource("1_3pq3j")

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="Control"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 4
theme_override_constants/margin_top = 4
theme_override_constants/margin_right = 4
theme_override_constants/margin_bottom = 4

[node name="HBoxContainer" type="HBoxContainer" parent="Control/MarginContainer"]
layout_mode = 2
size_flags_vertical = 0

[node name="VBoxContainer" type="VBoxContainer" parent="Control/MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 0

[node name="SpinBox" type="SpinBox" parent="Control/MarginContainer/HBoxContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
min_value = 1.0
value = 1.0

[node name="Slider" type="HSlider" parent="Control/MarginContainer/HBoxContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
max_value = 10.0

[node name="VBoxContainer2" type="VBoxContainer" parent="Control/MarginContainer/HBoxContainer"]
layout_mode = 2

[node name="All" type="Button" parent="Control/MarginContainer/HBoxContainer/VBoxContainer2"]
layout_mode = 2
text = "All"

[node name="OK" type="Button" parent="Control/MarginContainer/HBoxContainer/VBoxContainer2"]
layout_mode = 2
text = "OK"

[connection signal="value_changed" from="Control/MarginContainer/HBoxContainer/VBoxContainer/Slider" to="." method="on_slider_value_changed"]
[connection signal="pressed" from="Control/MarginContainer/HBoxContainer/VBoxContainer2/All" to="." method="on_all_pressed"]
[connection signal="pressed" from="Control/MarginContainer/HBoxContainer/VBoxContainer2/OK" to="." method="on_ok_pressed"]
